* Version 4.3

Unreleased.  Current line of development.

** Improvements

- All deprecated options and features of version 4.2 have been
  removed.

- Both Enblend and Enfuse can now send their output to files without a
  filename extension, which included devices, like e.g. "/dev/stdout".
  The output format is PNM (Portable aNyMap).  The same holds for the
  output mask file.  The common abbreviation `-' for `/dev/stdout' is
  understood.

- Enfuse: The default saturation weight has been set to zero.  This
  makes Enfuse's behavior more predictable.


** New Commandline Options

- To circumnavigate the lack of alpha-channel support of some common
  image formats, add option `--output-mask', to let the user define a
  mask filename for the output.


** Developer Stuff

- Configuration switches `--enable-image-cache' and its opposite were
  downgraded to nops.

- The new configuration option "--enable-partially-static-linking"
  controls whether all libraries are linked in their shared versions
  (default) or some performance critical libraries are linked in with
  the static versions.


** Package Maintainer Stuff

- Boost header <boost/optional.hpp> is not a mandatory header file
  anymore.  If the C++ standard library already supports C++17
  <optional> it will be preferred by configure(1).  A working
  standalone implementation of a C++11-compatiblle <optional> can be
  found at
          https://github.com/akrzemi1/Optional
  where only "optional.hpp" is needed.


* Version 4.2  "Compressor Road"

Released on March 29, 2016.

** Improvements

- All deprecated options and features of version 4.1 have been
  removed.

- Enblend and Enfuse support layer (aka "page", aka "frame") selection
  in of multi-layer image-files.  This includes processing any layers
  in user-defined order.

- Both Enblend and Enfuse can now perform all their pyramidal blending
  operations in CIELAB (aka L*a*b*, aka L-star) and CIELUV (aka