@@ -22,6 +22,7 @@
 \input{common-standard-workflow}
 \input{common-external-masks}
 \input{common-interaction}
+\input{common-metadata}
 
 \genidx[\rangeendlocation]{photographic workflow}
 
