@@ -19,6 +19,7 @@
 \urldef{\enblendhgcodesfnet}{\url}{http://hg.code.sf.net/p/enblend/code}
 \urldef{\enblendsourceforgenet}{\url}{http://enblend.sourceforge.net/}
 \urldef{\ericbrasseurgamma}{\url}{http://www.4p8.com/eric.brasseur/gamma.html}
+\urldef{\exiforg}{\url}{http://www.exif.org/}
 \urldef{\gccgnuorg}{\url}{https://gcc.gnu.org/}
 \urldef{\gimpguruorgblendingexposures}{\url}{https://www.gimp.org/tutorials/Blending_Exposures/}
 \urldef{\gimporg}{\url}{http://www.gimp.org/}
@@ -38,6 +39,7 @@
 \urldef{\imagemagickorgusagechannelstrans}{\url}{https://www.imagemagick.org/Usage/transform/}
 \urldef{\imagemagickorgusagefileshistogram}{\url}{https://www.imagemagick.org/Usage/files/#histogram}
 \urldef{\imagemagickorg}{\url}{https://www.imagemagick.org/script/index.php}
+\urldef{\iptcorg}{\url}{https://iptc.org/}
 \urldef{\kernelorgglob}{\url}{http://man7.org/linux/man-pages/man7/glob.7.html}
 \urldef{\khronosorgopencl}{\url}{https://www.khronos.org/opencl/}
 \urldef{\launchpadnet}{\url}{https://launchpad.net/}
@@ -51,8 +53,8 @@
 \urldef{\magiclanternfm}{\url}{http://www.magiclantern.fm/index.html}
 \urldef{\manorgfseek}{\url}{http://man7.org/linux/man-pages/man3/fseek.3.html}
 \urldef{\mercurialseleniccom}{\url}{https://www.mercurial-scm.org/}
-\urldef{\netpbm}{\url}{http://netpbm.sourceforge.net/}
 \urldef{\netpbmdoc}{\url}{http://netpbm.sourceforge.net/doc/}
+\urldef{\netpbm}{\url}{http://netpbm.sourceforge.net/}
 \urldef{\openexrcomfeatures}{\url}{http://www.openexr.com/about.html#features}
 \urldef{\openexrcom}{\url}{http://www.openexr.com/}
 \urldef{\openmporg}{\url}{http://openmp.org/wp/}
@@ -81,6 +83,7 @@
 \urldef{\wikipediasimulatedannealing}{\url}{https://en.wikipedia.org/wiki/Simulated_annealing}
 \urldef{\wikipediastandardilluminant}{\url}{https://en.wikipedia.org/wiki/Standard_illuminant}
 \urldef{\wikipediaziggaurat}{\url}{https://en.wikipedia.org/wiki/Ziggaurat}
+\urldef{\adobexmp}{\url}{https://www.adobe.com/products/xmp.html}
 
 
 %%% Local Variables:
